feat: add beacon task queue
